--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
-Django==2.2.17
-Pillow==8.1.1
-django-registration-redux==2.2
 bcrypt==3.2.0
+certifi==2020.12.5
+cffi==1.14.5
+coverage==5.5
+Django==2.2.17
+django-registration-redux==2.2
+Pillow==8.1.1
+pycparser==2.20
+pytz==2021.1
+six==1.15.0
+sqlparse==0.4.1
+wincertstore==0.2
