--- a/.gitignore
+++ b/.gitignore
@@ -61,7 +61,8 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 media
-upskill_photography/migrations
+upskill_photography/migrations/0001_initial.py
+upskill_photography/migrations/????_auto_*.py
 
 # Flask stuff:
 instance/
